# opensidian

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
demo/: Home.md
demo/.configs/: colors.md  config.md
demo/.templates/: Colleague.md  Meeting.md  Project.md
demo/Meetings/: 2024-03-11 Aurora Kickoff.md  2024-03-14 Weekly Standup.md  2024-03-18 Design Review.md  2024-03-20 Horizon Client Sync.md  2024-03-22 Nebula Architecture Review.md  2024-03-25 Q2 Planning.md  2024-03-28 Aurora Retrospective.md
demo/Notes/: Design System Notes.md  Product Decisions.md
demo/People/: Alice Chen.md  Bob Martinez.md  David Park.md  Emma Wilson.md  Sarah Kim.md
demo/Projects/: Project Aurora.md  Project Horizon.md  Project Nebula.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dialog_commands.rs  fs_commands.rs  mod.rs
src/components/backlinks/: BacklinksPanel.tsx
src/hooks/: useBacklinks.ts  useFileTree.ts  useGraph.ts  useVault.ts
src/lib/: configFile.ts  contextBuilder.ts  llmService.ts  tauriFs.ts  vaultIndexer.ts  vaultRef.ts  vaultScaffold.ts  wikilinkParser.ts
src/store/: colorStore.ts  editorStore.ts  llmStore.ts  noteEmojiStore.ts  onboardingStore.ts  settingsStore.ts  themeStore.ts  vaultStore.ts  wikilinkStore.ts
src/types/: graph.ts  vault.ts  wikilink.ts
(+18 files in other folders)
